Styling changes to make sure the link doesn't break the flow of the text

--- a/frontend/src/css/SpeciesDescription.module.css
+++ b/frontend/src/css/SpeciesDescription.module.css
@@ -7,13 +7,16 @@
 }
 .SubsectionDescription{
     margin: 20px;
-    margin-left: 40px
+    margin-left: 40px;
+    margin-bottom: 40px;
+    display: inline;
 }
 .Description{
     margin-left: 40px;
+    display: inline;
 }
 .EmbededHyperlink{
-    display: inline-block;
+    display: inline;
     margin: 0px;
     color: black;
     text-decoration: underline;
